--- a/HJ1001/HJ1001.csproj
+++ b/HJ1001/HJ1001.csproj
@@ -6,7 +6,7 @@
 		<UseWindowsForms>true</UseWindowsForms>
 		<UseWPF>true</UseWPF>
 		<OutputPath>Installer/BuildDrop</OutputPath>
-		<RootNamespace>HJ1001</RootNamespace>
+		<RootNamespace>MuggleTeklaPlugins.HJ1001</RootNamespace>
 		<AssemblyName>HJ1001</AssemblyName>
 		<Authors>thinkerhua@hotmail.com</Authors>
 	</PropertyGroup>
