--- a/Common/Common.csproj
+++ b/Common/Common.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{191F0900-2601-42FD-9334-4F0319628EBA}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>MuggleTeklaPlugins.Common</RootNamespace>
+    <RootNamespace>Muggle.TeklaPlugins.Common</RootNamespace>
     <AssemblyName>Common</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
@@ -85,20 +85,11 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <Compile Include="UIControls\ClassComboBox.cs">
-      <SubType>UserControl</SubType>
-    </Compile>
-    <Compile Include="UIControls\ComboBoxEx.cs">
-      <SubType>Component</SubType>
-    </Compile>
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
-    </EmbeddedResource>
-    <EmbeddedResource Include="UIControls\ClassComboBox.resx">
-      <DependentUpon>ClassComboBox.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
