修复ModelOperation类创建模型对象系列方法没有深拷贝引用对象引起的BUG； ModelOperation类新增MoveObject、CopyObject方法，旧的Move_Rotate、Copy_Rotate方法移除； MatrixFactoryExtension新增Rotate、Mirror方法；

--- a/Common/Common.csproj
+++ b/Common/Common.csproj
@@ -59,6 +59,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Internal\Internal.cs" />
+    <Compile Include="Model\ContourPointExtension.cs" />
+    <Compile Include="Model\PositionExtension.cs" />
     <Compile Include="Operation\CommonOperation.cs" />
     <Compile Include="Geometry3d\ArcExtension.cs" />
     <Compile Include="Geometry3d\CoordinateSystemExtension.cs" />
