完善版权信息；

--- a/HJ1001/HJ1001.csproj
+++ b/HJ1001/HJ1001.csproj
@@ -1,14 +1,14 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.WindowsDesktop">
 	<PropertyGroup>
-		<Copyright>Copyright © 2024 thinkerhua@hotmail.com</Copyright>
-		<OutputPath>bin\$(Configuration)\</OutputPath>
 		<TargetFramework>net48</TargetFramework>
 		<UseWindowsForms>true</UseWindowsForms>
 		<UseWPF>true</UseWPF>
-		<OutputPath>Installer/BuildDrop</OutputPath>
-		<RootNamespace>Muggle.TeklaPlugins.HJ1001</RootNamespace>
 		<AssemblyName>HJ1001</AssemblyName>
+		<RootNamespace>Muggle.TeklaPlugins.HJ1001</RootNamespace>
 		<Authors>thinkerhua@hotmail.com</Authors>
+		<Copyright>Copyright © 2024 thinkerhua@hotmail.com. All rights reserved.</Copyright>
+		<OutputPath>bin\$(Configuration)\</OutputPath>
+		<OutputPath>Installer/BuildDrop</OutputPath>
 	</PropertyGroup>
 	<ItemGroup>
 	  <PackageReference Include="Tekla.Structures" Version="2021.0.0" />
