--- a/MG1002/MG1002.csproj
+++ b/MG1002/MG1002.csproj
@@ -1,14 +1,14 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.WindowsDesktop">
 	<PropertyGroup>
-		<Copyright>Copyright © 2024 thinkerhua@hotmail.com</Copyright>
-		<OutputPath>bin\$(Configuration)\</OutputPath>
 		<TargetFramework>net48</TargetFramework>
 		<UseWindowsForms>true</UseWindowsForms>
 		<UseWPF>true</UseWPF>
-		<OutputPath>Installer/BuildDrop</OutputPath>
 		<RootNamespace>Muggle.TeklaPlugins.MG1002</RootNamespace>
 		<AssemblyName>MG1002</AssemblyName>
 		<Authors>thinkerhua@hotmail.com</Authors>
+		<Copyright>Copyright © 2024 thinkerhua@hotmail.com. All rights reserved.</Copyright>
+		<OutputPath>bin\$(Configuration)\</OutputPath>
+		<OutputPath>Installer/BuildDrop</OutputPath>
 	</PropertyGroup>
 	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
 	  <PlatformTarget>AnyCPU</PlatformTarget>
