--- a/WK1001/WK1001.csproj
+++ b/WK1001/WK1001.csproj
@@ -1,14 +1,14 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.WindowsDesktop">
 	<PropertyGroup>
-		<Copyright>Copyright © 1992-$([System.DateTime]::Now.ToString("yyyy")) Trimble Solutions Corporation and its licensors. All rights reserved.</Copyright>
-		<OutputPath>bin\$(Configuration)\</OutputPath>
 		<TargetFramework>net48</TargetFramework>
+		<PlatformTarget>AnyCPU</PlatformTarget>
 		<UseWindowsForms>true</UseWindowsForms>
 		<UseWPF>true</UseWPF>
-		<OutputPath>Installer/BuildDrop</OutputPath>
-		<RootNamespace>Muggle.TeklaPlugins.WK1001</RootNamespace>
 		<AssemblyName>WK1001</AssemblyName>
-		<PlatformTarget>AnyCPU</PlatformTarget>
+		<RootNamespace>Muggle.TeklaPlugins.WK1001</RootNamespace>
+		<OutputPath>bin\$(Configuration)\</OutputPath>
+		<OutputPath>Installer/BuildDrop</OutputPath>
+		<Copyright>Copyright © 2025 thinkerhua@hotmail.com. All rights reserved.</Copyright>
 	</PropertyGroup>
 	<ItemGroup>
 	  <PackageReference Include="Tekla.Structures" Version="2021.0.0" />
