--- a/.gitignore
+++ b/.gitignore
@@ -365,3 +365,4 @@ FodyWeavers.xsd
 /HJ1001/Installer/BuildDrop/net48
 /MG1001/Installer/BuildDrop/net48
 /MG1002/Installer/BuildDrop/net48
+/MJ1001/Installer/BuildDrop/net48
