--- a/.gitignore
+++ b/.gitignore
@@ -366,3 +366,4 @@ FodyWeavers.xsd
 /MG1001/Installer/BuildDrop/net48
 /MG1002/Installer/BuildDrop/net48
 /MJ1001/Installer/BuildDrop/net48
+/KJ2001/Installer
