--- a/MainForm/MainForm.csproj
+++ b/MainForm/MainForm.csproj
@@ -113,6 +113,7 @@
     <Compile Include="MainForm.Designer.cs">
       <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Plugins\KJ2001_Outter.cs" />
     <Compile Include="Plugins\WK1001_Outer.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -190,7 +191,9 @@
   <ItemGroup>
     <None Include="Resources\et_element_WK1001.bmp" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <None Include="Resources\et_element_KJ2001.bmp" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
