MJ1001项目重命名为MJ5001；

--- a/.gitignore
+++ b/.gitignore
@@ -367,3 +367,4 @@ FodyWeavers.xsd
 /MG1002/Installer/BuildDrop/net48
 /MJ1001/Installer/BuildDrop/net48
 /KJ2001/Installer
+/MJ5001/Installer/BuildDrop/net48
