格式化和清理代码；

--- a/.gitignore
+++ b/.gitignore
@@ -369,3 +369,4 @@ FodyWeavers.xsd
 /KJ2001/Installer
 /MJ5001/Installer/BuildDrop/net48
 /KJ1001/Installer
+/.idea/.idea.Muggle Tekla-Plugins/.idea
