--- a/.gitignore
+++ b/.gitignore
@@ -370,3 +370,4 @@ FodyWeavers.xsd
 /MJ5001/Installer/BuildDrop/net48
 /KJ1001/Installer
 /.idea/.idea.Muggle Tekla-Plugins/.idea
+/KJ1002/Installer
