新建 Common.WPF 项目；KJ1002: UpDirectionToSelectedIndexValueConverter 移至 Common.WPF中；

--- a/KJ1002/KJ1002.csproj
+++ b/KJ1002/KJ1002.csproj
@@ -25,6 +25,7 @@
     <Folder Include="Properties\" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Common.WPF\Common.WPF.csproj" />
     <ProjectReference Include="..\Common\Common.csproj" />
   </ItemGroup>
   <ItemGroup>
