--- a/HJ1001/HJ1001.csproj
+++ b/HJ1001/HJ1001.csproj
@@ -11,6 +11,9 @@
 		<OutputPath>Installer/BuildDrop</OutputPath>
 	</PropertyGroup>
 	<ItemGroup>
+	  <None Remove="Resources\Up direction.png" />
+	</ItemGroup>
+	<ItemGroup>
 	  <PackageReference Include="Tekla.Structures" Version="2021.0.0" />
 	  <PackageReference Include="Tekla.Structures.Datatype" Version="2021.0.0" />
 	  <PackageReference Include="Tekla.Structures.Dialog" Version="2021.0.0" />
@@ -18,10 +21,14 @@
 	  <PackageReference Include="Tekla.Structures.Plugins" Version="2021.0.0" />
 	</ItemGroup>
 	<ItemGroup>
+	  <ProjectReference Include="..\Common.WPF\Common.WPF.csproj" />
 	  <ProjectReference Include="..\Common\Common.csproj" />
 	</ItemGroup>
 	<ItemGroup>
 	  <Folder Include="Properties\" />
+	</ItemGroup>
+	<ItemGroup>
+	  <Resource Include="Resources\Up direction.png" />
 	</ItemGroup>
 	<Target Name="PostBuild" AfterTargets="PostBuildEvent">
 	  <Exec Command="xcopy &quot;$(TargetDir)$(TargetName).dll&quot; &quot;D:\Program Files\Tekla Structures\2021.0\Environments\common\extensions\MuggleTeklaPlugins\&quot; /Y /C /Q /R" />
