--- a/MG1001/MG1001.csproj
+++ b/MG1001/MG1001.csproj
@@ -22,6 +22,7 @@
 	  <PackageReference Include="Tekla.Structures.Plugins" Version="2021.0.0" />
 	</ItemGroup>
 	<ItemGroup>
+	  <ProjectReference Include="..\Common.WPF\Common.WPF.csproj" />
 	  <ProjectReference Include="..\Common\Common.csproj" />
 	</ItemGroup>
 	<ItemGroup>
@@ -30,6 +31,7 @@
 	<ItemGroup>
 	  <Resource Include="Resources\3.png" />
 	  <Resource Include="Resources\4.png" />
+	  <Resource Include="Resources\Up direction.png" />
 	</ItemGroup>
 	<Target Name="PostBuild" AfterTargets="PostBuildEvent">
 	  <Exec Command="xcopy &quot;$(TargetDir)$(TargetName).dll&quot; &quot;D:\Program Files\Tekla Structures\2021.0\Environments\common\extensions\MuggleTeklaPlugins\&quot; /Y /C /Q /R" />
