--- a/Common/Common.csproj
+++ b/Common/Common.csproj
@@ -9,9 +9,9 @@
     <GenerateDocumentationFile>True</GenerateDocumentationFile>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Tekla.Structures" Version="2021.0.0" />
-    <PackageReference Include="Tekla.Structures.Datatype" Version="2021.0.0" />
-    <PackageReference Include="Tekla.Structures.Model" Version="2021.0.0" />
+    <PackageReference Include="Tekla.Structures" Version="2021.0.0" ExcludeAssets="runtime" />
+    <PackageReference Include="Tekla.Structures.Datatype" Version="2021.0.0" ExcludeAssets="runtime" />
+    <PackageReference Include="Tekla.Structures.Model" Version="2021.0.0" ExcludeAssets="runtime" />
   </ItemGroup>
   <Target Name="PostBuild" AfterTargets="PostBuildEvent">
     <Exec Command="xcopy &quot;$(TargetDir)$(TargetName).dll&quot; &quot;D:\Program Files\Tekla Structures\2021.0\Environments\common\extensions\MuggleTeklaPlugins\&quot; /Y /C /Q /R" />
