--- a/KJ1002/KJ1002.csproj
+++ b/KJ1002/KJ1002.csproj
@@ -14,19 +14,19 @@
     <None Remove="Resources\Up direction.png" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Tekla.Structures" Version="2021.0.0" />
-    <PackageReference Include="Tekla.Structures.Catalogs" Version="2021.0.0" />
-    <PackageReference Include="Tekla.Structures.Datatype" Version="2021.0.0" />
-    <PackageReference Include="Tekla.Structures.Dialog" Version="2021.0.0" />
-    <PackageReference Include="Tekla.Structures.Model" Version="2021.0.0" />
-    <PackageReference Include="Tekla.Structures.Plugins" Version="2021.0.0" />
+    <PackageReference Include="Tekla.Structures" Version="2021.0.0" ExcludeAssets="runtime" />
+    <PackageReference Include="Tekla.Structures.Catalogs" Version="2021.0.0" ExcludeAssets="runtime" />
+    <PackageReference Include="Tekla.Structures.Datatype" Version="2021.0.0" ExcludeAssets="runtime" />
+    <PackageReference Include="Tekla.Structures.Dialog" Version="2021.0.0" ExcludeAssets="runtime" />
+    <PackageReference Include="Tekla.Structures.Model" Version="2021.0.0" ExcludeAssets="runtime" />
+    <PackageReference Include="Tekla.Structures.Plugins" Version="2021.0.0" ExcludeAssets="runtime" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Properties\" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Common.WPF\Common.WPF.csproj" />
-    <ProjectReference Include="..\Common\Common.csproj" />
+    <ProjectReference Include="..\Common.WPF\Common.WPF.csproj" private="false" />
+    <ProjectReference Include="..\Common\Common.csproj" private="false" />
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Resources\Up direction.png" />
