--- a/Test_Console/Test_Console.csproj
+++ b/Test_Console/Test_Console.csproj
@@ -5,15 +5,15 @@
     <RootNamespace>Muggle.TeklaPlugins.Test</RootNamespace>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Tekla.Structures" Version="2021.0.0" />
-    <PackageReference Include="Tekla.Structures.Catalogs" Version="2021.0.0" />
-    <PackageReference Include="Tekla.Structures.Datatype" Version="2021.0.0" />
-    <PackageReference Include="Tekla.Structures.Dialog" Version="2021.0.0" />
-    <PackageReference Include="Tekla.Structures.Model" Version="2021.0.0" />
-    <PackageReference Include="Tekla.Structures.Plugins" Version="2021.0.0" />
+    <PackageReference Include="Tekla.Structures" Version="2021.0.0" ExcludeAssets="runtime" />
+    <PackageReference Include="Tekla.Structures.Catalogs" Version="2021.0.0" ExcludeAssets="runtime" />
+    <PackageReference Include="Tekla.Structures.Datatype" Version="2021.0.0" ExcludeAssets="runtime" />
+    <PackageReference Include="Tekla.Structures.Dialog" Version="2021.0.0" ExcludeAssets="runtime" />
+    <PackageReference Include="Tekla.Structures.Model" Version="2021.0.0" ExcludeAssets="runtime" />
+    <PackageReference Include="Tekla.Structures.Plugins" Version="2021.0.0" ExcludeAssets="runtime" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Common\Common.csproj" />
+    <ProjectReference Include="..\Common\Common.csproj" private="false" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Properties\" />
