--- a/Common.WPF/Common.WPF.csproj
+++ b/Common.WPF/Common.WPF.csproj
@@ -1,17 +1,20 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>net48</TargetFramework>
-    <LangVersion>latest</LangVersion>
-    <OutputType>Library</OutputType>
-    <UseWPF>true</UseWPF>
-    <RootNamespace>Muggle.TeklaPlugins.Common.WPF</RootNamespace>
-    <Authors>thinkerhua@hotmail.com</Authors>
-    <Copyright>Copyright © 2025 thinkerhua@hotmail.com. All rights reserved.</Copyright>
-  </PropertyGroup>
-  
-  <Target Name="PostBuild" AfterTargets="PostBuildEvent">
+	<PropertyGroup>
+		<TargetFramework>net48</TargetFramework>
+		<LangVersion>latest</LangVersion>
+		<OutputType>Library</OutputType>
+		<UseWPF>true</UseWPF>
+		<RootNamespace>Muggle.TeklaPlugins.Common.WPF</RootNamespace>
+		<Authors>thinkerhua@hotmail.com</Authors>
+		<Copyright>Copyright © 2025 thinkerhua@hotmail.com. All rights reserved.</Copyright>
+		<OutputPath>../TSEP/binaries</OutputPath>
+		<AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
+		<AppendRuntimeIdentifierToOutputPath>false</AppendRuntimeIdentifierToOutputPath>
+	</PropertyGroup>
+
+	<Target Name="PostBuild" AfterTargets="PostBuildEvent">
 		<Exec Command="xcopy &quot;$(TargetDir)$(TargetName).dll&quot; &quot;D:\Program Files\Tekla Structures\2021.0\Environments\common\extensions\MuggleTSExtensions\&quot; /Y /C /Q /R" />
-  </Target>
+	</Target>
 
 </Project>
