--- a/KJ1002/KJ1002.csproj
+++ b/KJ1002/KJ1002.csproj
@@ -1,37 +1,36 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.WindowsDesktop">
-  <PropertyGroup>
-    <TargetFramework>net48</TargetFramework>
-    <LangVersion>8.0</LangVersion>
-    <UseWPF>true</UseWPF>
-    <Authors>thinkerhua@hotmail.com</Authors>
-    <Copyright>Copyright © 2025 thinkerhua@hotmail.com. All rights reserved.</Copyright>
-    <OutputPath>Installer/BuildDrop</OutputPath>
-    <AssemblyTitle>KJ1002</AssemblyTitle>
-    <AssemblyName>KJ1002</AssemblyName>
-    <RootNamespace>Muggle.TeklaPlugins.KJ1002</RootNamespace>
-  </PropertyGroup>
-  <ItemGroup>
-    <None Remove="Resources\Up direction.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <PackageReference Include="Tekla.Structures" Version="2021.0.0" ExcludeAssets="runtime" />
-    <PackageReference Include="Tekla.Structures.Catalogs" Version="2021.0.0" ExcludeAssets="runtime" />
-    <PackageReference Include="Tekla.Structures.Datatype" Version="2021.0.0" ExcludeAssets="runtime" />
-    <PackageReference Include="Tekla.Structures.Dialog" Version="2021.0.0" ExcludeAssets="runtime" />
-    <PackageReference Include="Tekla.Structures.Model" Version="2021.0.0" ExcludeAssets="runtime" />
-    <PackageReference Include="Tekla.Structures.Plugins" Version="2021.0.0" ExcludeAssets="runtime" />
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Properties\" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Common.WPF\Common.WPF.csproj" private="false" />
-    <ProjectReference Include="..\Common\Common.csproj" private="false" />
-  </ItemGroup>
-  <ItemGroup>
-    <Resource Include="Resources\Up direction.png" />
-  </ItemGroup>
-  <Target Name="PostBuild" AfterTargets="PostBuildEvent">
+	<PropertyGroup>
+		<TargetFramework>net48</TargetFramework>
+		<LangVersion>8.0</LangVersion>
+		<UseWPF>true</UseWPF>
+		<Authors>thinkerhua@hotmail.com</Authors>
+		<Copyright>Copyright © 2025 thinkerhua@hotmail.com. All rights reserved.</Copyright>
+		<AssemblyTitle>KJ1002</AssemblyTitle>
+		<AssemblyName>KJ1002</AssemblyName>
+		<RootNamespace>Muggle.TeklaPlugins.KJ1002</RootNamespace>
+		<OutputPath>../TSEP/binaries</OutputPath>
+		<AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
+		<AppendRuntimeIdentifierToOutputPath>false</AppendRuntimeIdentifierToOutputPath>
+	</PropertyGroup>
+	<ItemGroup>
+		<None Remove="Resources\Up direction.png" />
+	</ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="Tekla.Structures" Version="2021.0.0" ExcludeAssets="runtime" />
+		<PackageReference Include="Tekla.Structures.Catalogs" Version="2021.0.0" ExcludeAssets="runtime" />
+		<PackageReference Include="Tekla.Structures.Datatype" Version="2021.0.0" ExcludeAssets="runtime" />
+		<PackageReference Include="Tekla.Structures.Dialog" Version="2021.0.0" ExcludeAssets="runtime" />
+		<PackageReference Include="Tekla.Structures.Model" Version="2021.0.0" ExcludeAssets="runtime" />
+		<PackageReference Include="Tekla.Structures.Plugins" Version="2021.0.0" ExcludeAssets="runtime" />
+	</ItemGroup>
+	<ItemGroup>
+		<ProjectReference Include="..\Common.WPF\Common.WPF.csproj" private="false" />
+		<ProjectReference Include="..\Common\Common.csproj" private="false" />
+	</ItemGroup>
+	<ItemGroup>
+		<Resource Include="Resources\Up direction.png" />
+	</ItemGroup>
+	<Target Name="PostBuild" AfterTargets="PostBuildEvent">
 		<Exec Command="xcopy &quot;$(TargetDir)$(TargetName).dll&quot; &quot;D:\Program Files\Tekla Structures\2021.0\Environments\common\extensions\MuggleTSExtensions\&quot; /Y /C /Q /R" />
-  </Target>
+	</Target>
 </Project>
