--- a/HJ1001/HJ1001.csproj
+++ b/HJ1001/HJ1001.csproj
@@ -7,8 +7,9 @@
 		<RootNamespace>Muggle.TeklaPlugins.HJ1001</RootNamespace>
 		<Authors>thinkerhua@hotmail.com</Authors>
 		<Copyright>Copyright © 2024 thinkerhua@hotmail.com. All rights reserved.</Copyright>
-		<OutputPath>bin\$(Configuration)\</OutputPath>
-		<OutputPath>Installer/BuildDrop</OutputPath>
+		<OutputPath>../TSEP/binaries</OutputPath>
+		<AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
+		<AppendRuntimeIdentifierToOutputPath>false</AppendRuntimeIdentifierToOutputPath>
 	</PropertyGroup>
 	<ItemGroup>
 		<None Remove="Resources\Up direction.png" />
@@ -23,9 +24,6 @@
 	<ItemGroup>
 		<ProjectReference Include="..\Common.WPF\Common.WPF.csproj" private="false" />
 		<ProjectReference Include="..\Common\Common.csproj" private="false"/>
-	</ItemGroup>
-	<ItemGroup>
-		<Folder Include="Properties\" />
 	</ItemGroup>
 	<ItemGroup>
 		<Resource Include="Resources\Up direction.png" />
