--- a/MJ5001/MJ5001.csproj
+++ b/MJ5001/MJ5001.csproj
@@ -1,30 +1,29 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.WindowsDesktop">
-  <PropertyGroup>
-    <TargetFramework>net48</TargetFramework>
-    <LangVersion>8.0</LangVersion>
-    <AssemblyTitle>MJ5001</AssemblyTitle>
-    <Authors>thinkerhua@hotmail.com</Authors>
-    <Copyright>Copyright © 2025 thinkerhua@hotmail.com. All rights reserved.</Copyright>
-    <UseWPF>true</UseWPF>
-    <OutputPath>Installer/BuildDrop</OutputPath>
-    <RootNamespace>Muggle.TeklaPlugins.MJ5001</RootNamespace>
-    <AssemblyName>MJ5001</AssemblyName>
-  </PropertyGroup>
-  <ItemGroup>
-    <Folder Include="Properties\" />
-  </ItemGroup>
-  <ItemGroup>
-    <PackageReference Include="Tekla.Structures" Version="2021.0.0" ExcludeAssets="runtime" />
-    <PackageReference Include="Tekla.Structures.Catalogs" Version="2021.0.0" ExcludeAssets="runtime" />
-    <PackageReference Include="Tekla.Structures.Datatype" Version="2021.0.0" ExcludeAssets="runtime" />
-    <PackageReference Include="Tekla.Structures.Dialog" Version="2021.0.0" ExcludeAssets="runtime" />
-    <PackageReference Include="Tekla.Structures.Model" Version="2021.0.0" ExcludeAssets="runtime" />
-    <PackageReference Include="Tekla.Structures.Plugins" Version="2021.0.0" ExcludeAssets="runtime" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Common\Common.csproj" private="false" />
-  </ItemGroup>
-  <Target Name="PostBuild" AfterTargets="PostBuildEvent">
+	<PropertyGroup>
+		<TargetFramework>net48</TargetFramework>
+		<LangVersion>8.0</LangVersion>
+		<AssemblyTitle>MJ5001</AssemblyTitle>
+		<Authors>thinkerhua@hotmail.com</Authors>
+		<Copyright>Copyright © 2025 thinkerhua@hotmail.com. All rights reserved.</Copyright>
+		<UseWPF>true</UseWPF>
+		<RootNamespace>Muggle.TeklaPlugins.MJ5001</RootNamespace>
+		<AssemblyName>MJ5001</AssemblyName>
+		<OutputPath>../TSEP/binaries</OutputPath>
+		<AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
+		<AppendRuntimeIdentifierToOutputPath>false</AppendRuntimeIdentifierToOutputPath>
+	</PropertyGroup>
+	<ItemGroup>
+		<PackageReference Include="Tekla.Structures" Version="2021.0.0" ExcludeAssets="runtime" />
+		<PackageReference Include="Tekla.Structures.Catalogs" Version="2021.0.0" ExcludeAssets="runtime" />
+		<PackageReference Include="Tekla.Structures.Datatype" Version="2021.0.0" ExcludeAssets="runtime" />
+		<PackageReference Include="Tekla.Structures.Dialog" Version="2021.0.0" ExcludeAssets="runtime" />
+		<PackageReference Include="Tekla.Structures.Model" Version="2021.0.0" ExcludeAssets="runtime" />
+		<PackageReference Include="Tekla.Structures.Plugins" Version="2021.0.0" ExcludeAssets="runtime" />
+	</ItemGroup>
+	<ItemGroup>
+		<ProjectReference Include="..\Common\Common.csproj" private="false" />
+	</ItemGroup>
+	<Target Name="PostBuild" AfterTargets="PostBuildEvent">
 		<Exec Command="xcopy &quot;$(TargetDir)$(TargetName).dll&quot; &quot;D:\Program Files\Tekla Structures\2021.0\Environments\common\extensions\MuggleTSExtensions\&quot; /Y /C /Q /R" />
-  </Target>
+	</Target>
 </Project>
