MainWindow: 修复未正确应用程序图标的问题；

--- a/MainWindow/MainWindow.csproj
+++ b/MainWindow/MainWindow.csproj
@@ -12,11 +12,8 @@
 		<OutputPath>../TSEP/binaries</OutputPath>
 		<AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
 		<AppendRuntimeIdentifierToOutputPath>false</AppendRuntimeIdentifierToOutputPath>
+		<ApplicationIcon>Resources\logo.ico</ApplicationIcon>
 	</PropertyGroup>
-	<ItemGroup>
-	  <None Remove="Resources\logo.ico" />
-	  <None Remove="Resources\logo.jpg" />
-	</ItemGroup>
 	<ItemGroup>
 		<PackageReference Include="CommunityToolkit.Mvvm" Version="8.4.0" />
 		<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.5" />
