--- a/MainWindow/MainWindow.csproj
+++ b/MainWindow/MainWindow.csproj
@@ -28,6 +28,7 @@
 		<Reference Include="PresentationFramework.Aero2" />
 	</ItemGroup>
 	<ItemGroup>
+		<ProjectReference Include="..\Common.WPF\Common.WPF.csproj" />
 		<ProjectReference Include="..\Common\Common.csproj" private="false" />
 	</ItemGroup>
 	<ItemGroup>
